[gd_scene load_steps=48 format=3 uid="uid://byrfv8ds4a5gl"]

[ext_resource type="Script" path="res://Cenas/player.gd" id="1_h6utq"]
[ext_resource type="Shader" uid="uid://caykg0v632kay" path="res://Cenas/player_hit_flash_shader.tres" id="2_at6xd"]
[ext_resource type="Texture2D" uid="uid://dt7jijm61hql4" path="res://Sprites/Sprites/Player_Souls/idle_1.png" id="2_iv062"]
[ext_resource type="Texture2D" uid="uid://ppia1ff10jmp" path="res://Sprites/Sprites/Player_Souls/attack1.png" id="3_w7m1l"]
[ext_resource type="Texture2D" uid="uid://dh6ko0sbl35pw" path="res://Sprites/Sprites/Player_Souls/run1.png" id="4_mgpdn"]
[ext_resource type="Texture2D" uid="uid://buq5xmefflouu" path="res://Sprites/Sprites/Player_Souls/jump1.png" id="5_jab51"]
[ext_resource type="Script" path="res://Cenas/character_state_machine.gd" id="6_nx8c7"]
[ext_resource type="Script" path="res://Cenas/GroundState.gd" id="7_2ataj"]
[ext_resource type="Script" path="res://Cenas/AirState.gd" id="8_fscdy"]
[ext_resource type="Script" path="res://Cenas/LandingState.gd" id="9_o5r3w"]
[ext_resource type="Script" path="res://Cenas/attack.gd" id="10_bqudu"]
[ext_resource type="Script" path="res://Cenas/state_debug_label.gd" id="10_s5vh8"]
[ext_resource type="Script" path="res://Cenas/sword.gd" id="12_1xdh4"]
[ext_resource type="Script" path="res://Cenas/FacingCollisionShape2D.gd" id="13_xpjaa"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cu6u5"]
shader = ExtResource("2_at6xd")
shader_parameter/enable = false
shader_parameter/hit_color = Color(0.905882, 0.031373, 0.086275, 1)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_63fg1"]
height = 72.0

[sub_resource type="Animation" id="Animation_q6svc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sword:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_88pbr"]
resource_name = "Run"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_mgpdn")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_oqim6"]
resource_name = "attack1"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_w7m1l")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sword:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_krebf"]
resource_name = "attack2"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_w7m1l")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sword:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_xp8ys"]
resource_name = "idle"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_iv062")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 0, 0, 0]
}

[sub_resource type="Animation" id="Animation_0731a"]
resource_name = "jump_end"
length = 0.4
step = 0.08
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_jab51")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}

[sub_resource type="Animation" id="Animation_r77n3"]
resource_name = "jump_start"
length = 0.6
loop_mode = 2
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_jab51")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_natry"]
_data = {
"RESET": SubResource("Animation_q6svc"),
"Run": SubResource("Animation_88pbr"),
"attack1": SubResource("Animation_oqim6"),
"attack2": SubResource("Animation_krebf"),
"idle": SubResource("Animation_xp8ys"),
"jump_end": SubResource("Animation_0731a"),
"jump_start": SubResource("Animation_r77n3")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xfyr1"]
animation = &"attack1"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pt1n4"]
animation = &"attack2"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0bkqd"]
animation = &"jump_end"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2jsp6"]
animation = &"jump_start"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0kh0v"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8koow"]
animation = &"Run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4pccr"]
animation = &"Run"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_ucuad"]
blend_point_0/node = SubResource("AnimationNodeAnimation_0kh0v")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_8koow")
blend_point_1/pos = 1.0
blend_point_2/node = SubResource("AnimationNodeAnimation_4pccr")
blend_point_2/pos = -1.0
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3pisk"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0pjfu"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ltrv8"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_udoqc"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gjh38"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_i1fc0"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4nopx"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_veabe"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_uxnb0"]
states/Start/position = Vector2(271, 255)
states/attack1/node = SubResource("AnimationNodeAnimation_xfyr1")
states/attack1/position = Vector2(439, 359)
states/attack2/node = SubResource("AnimationNodeAnimation_pt1n4")
states/attack2/position = Vector2(612, 359)
states/jump_end/node = SubResource("AnimationNodeAnimation_0bkqd")
states/jump_end/position = Vector2(652, 258)
states/jump_start/node = SubResource("AnimationNodeAnimation_2jsp6")
states/jump_start/position = Vector2(439, 117)
states/move/node = SubResource("AnimationNodeBlendSpace1D_ucuad")
states/move/position = Vector2(439, 258)
transitions = ["Start", "move", SubResource("AnimationNodeStateMachineTransition_3pisk"), "move", "jump_start", SubResource("AnimationNodeStateMachineTransition_0pjfu"), "jump_start", "jump_end", SubResource("AnimationNodeStateMachineTransition_ltrv8"), "jump_end", "move", SubResource("AnimationNodeStateMachineTransition_udoqc"), "move", "attack1", SubResource("AnimationNodeStateMachineTransition_gjh38"), "attack1", "attack2", SubResource("AnimationNodeStateMachineTransition_i1fc0"), "attack2", "move", SubResource("AnimationNodeStateMachineTransition_4nopx"), "attack1", "move", SubResource("AnimationNodeStateMachineTransition_veabe")]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_63k6g"]
size = Vector2(35, 46)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_36loa"]
radius = 16.0
height = 72.0

[sub_resource type="Animation" id="Animation_632sx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/enable")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_yfrot"]
resource_name = "hit"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/enable")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_3g28d"]
resource_name = "teste"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hs4fv"]
_data = {
"RESET": SubResource("Animation_632sx"),
"hit": SubResource("Animation_yfrot"),
"teste": SubResource("Animation_3g28d")
}

[node name="Jogador" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_h6utq")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_cu6u5")
position = Vector2(1, 9.53674e-07)
scale = Vector2(0.818359, 0.703125)
texture = ExtResource("2_iv062")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_63fg1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_natry")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_uxnb0")
anim_player = NodePath("../AnimationPlayer")
parameters/move/blend_position = null

[node name="CharacterStateMachine" type="Node" parent="." node_paths=PackedStringArray("character", "animation_tree", "current_state")]
script = ExtResource("6_nx8c7")
character = NodePath("..")
animation_tree = NodePath("../AnimationTree")
current_state = NodePath("Ground")

[node name="Ground" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("air_state", "attack_state")]
script = ExtResource("7_2ataj")
air_state = NodePath("../Air")
jump_animation = "jump_start"
attack_state = NodePath("../Attack")
attack_node = "attack1"

[node name="BufferTimer" type="Timer" parent="CharacterStateMachine/Ground"]
wait_time = 0.05
autostart = true

[node name="Air" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("landing_state")]
script = ExtResource("8_fscdy")
landing_state = NodePath("../Landing")
landing_animation = "jump_end"

[node name="Landing" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("ground_state")]
script = ExtResource("9_o5r3w")
landing_animation_name = "jump_end"
ground_state = NodePath("../Ground")
can_move = false

[node name="Attack" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("return_state")]
script = ExtResource("10_bqudu")
return_state = NodePath("../Ground")
can_move = false

[node name="Timer" type="Timer" parent="CharacterStateMachine/Attack"]
wait_time = 0.2
one_shot = true

[node name="StateDebugLabel" type="Label" parent="." node_paths=PackedStringArray("state_machine")]
visible = false
offset_left = -59.0
offset_top = -58.0
offset_right = 66.0
offset_bottom = -35.0
text = "State:"
script = ExtResource("10_s5vh8")
state_machine = NodePath("../CharacterStateMachine")

[node name="Sword" type="Area2D" parent="." node_paths=PackedStringArray("player", "facing_shape")]
position = Vector2(-1, 0)
collision_layer = 0
collision_mask = 4
monitoring = false
script = ExtResource("12_1xdh4")
player = NodePath("..")
facing_shape = NodePath("CollisionShape2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sword"]
position = Vector2(30.5, -4)
shape = SubResource("RectangleShape2D_63k6g")
script = ExtResource("13_xpjaa")
facing_left_position = Vector2(-30.5, 0)
facing_right_position = Vector2(30.5, 0)

[node name="Hurtbox" type="Area2D" parent="."]
position = Vector2(-39, 30)
collision_layer = 2
collision_mask = 4

[node name="HurtboxCollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(39, -28)
shape = SubResource("CapsuleShape2D_36loa")
debug_color = Color(0.961112, 0.186353, 0.175121, 0.42)

[node name="HitAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hs4fv")
}

[connection signal="animation_finished" from="AnimationTree" to="CharacterStateMachine/Landing" method="_on_animation_tree_animation_finished"]
[connection signal="animation_finished" from="AnimationTree" to="CharacterStateMachine/Attack" method="_on_animation_tree_animation_finished"]
[connection signal="body_entered" from="Sword" to="Sword" method="_on_body_entered"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
